fixed image overflow in banner issue

--- a/Resources/style.css
+++ b/Resources/style.css
@@ -40,9 +40,10 @@ html, body {
 
 #jumbotron {
   display: flex;
-  height: 500px;
+  height: 400px;
   padding-left: 24px;
   padding-top: 32px;
+  padding-bottom: 32px;
   background-color: lightgrey;
   align-items: center;
   justify-content: center;
@@ -50,10 +51,14 @@ html, body {
 
 #jumbotronLeftImage {
   width: 60%;
+  max-height: 400px;
+  max-width: 700px;
   height: auto;
   background-size: cover;
   overflow: hidden;
-  /*max-width: 600px;*/
+  margin-top: 32px;
+  margin-bottom: 32px;
+  margin-left: 24px;
 }
 
 #jumbotronLeftImage img {
